force-app/main/default/objects/Month_Split__c/Month_Split__c.object-meta.xml
<CustomObject>
    <label>Month Split</label>
    <nameField>
        <displayFormat>MSN-{0000}</displayFormat>
        <label>Month Split Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Month Split</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>