force-app/main/default/objects/Month_Split__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <formula>IF(
				DAY(First_Consumed_Date__c) &lt;= 15,
				&quot;Batch 2&quot;,
				&quot;Batch 1&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Batch Status</label>
    <type>Text</type>
</CustomField>