force-app/main/default/objects/Month_Split__c/fields/Month_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Month_Sequence__c</fullName>
    <label>Month Sequence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>