force-app/main/default/objects/Month_Split__c/fields/MSL_Batch_Summary__c.field-meta.xml
<CustomField>
    <fullName>MSL_Batch_Summary__c</fullName>
    <label>MSL Batch Summary</label>
    <referenceTo>MSL_Batch_Summary__c</referenceTo>
    <relationshipLabel>Month Split</relationshipLabel>
    <relationshipName>Month_Split</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>