force-app/main/default/objects/Month_Split__c/fields/PO_Submitted__c.field-meta.xml
<CustomField>
    <fullName>PO_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Submitted?</label>
    <type>Checkbox</type>
</CustomField>