force-app/main/default/objects/Month_Split__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Month Split</relationshipLabel>
    <relationshipName>Month_Split</relationshipName>
    <type>Lookup</type>
</CustomField>