force-app/main/default/objects/Month_Split__c/fields/Quantity_Orderd__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Orderd__c</fullName>
    <label>Quantity Orderd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>